--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "cwd": "/Users/raz.shenkman/Documents/network_workspace/Exercise2/Question2/"
         },
         {
             "name": "Python: Attach",
